[package]
name = "rtt-traffic-scan"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
socket2 = "0.5.6"
libc = "0.2"
ctrlc = "3.4"
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
